app/assets/stylesheets/10-osul-megamenu.css.scss
@import "bootstrap/mixins";

#mobile-menu {
  display: none;
  @media (max-width:480px) {
    position:absolute;z-index:999;top:40px;
    padding: 0px 8px;
    .menu{@include border-radius(0)}
  }
}

#main-menu {
  .form-actions{background-color:transparent;padding:0;}
  .menu{margin:1em 0;float:none;background-color:#373737;z-index:200;@include border-radius(4px);font-size:14px;}
  .content{padding:0;}
}

.megamenu-menu {
  height: 34px;
  overflow:visible;
  padding:3px 0px;
  @include border-radius(4px);
  z-index:10;
  background-color:#373737;
  margin: 0;

  *,
  .megamenu-parent,
  .megamenu-parent-title,
  .megamenu-bin,
  .megamenu-slot,
  .megamenu-slot-title,
  .megamenu-items{margin:0;padding:0;border:0;outline:0;font-size:100%;font-weight:normal;vertical-align:baseline;background:transparent;}
  &, ul.megamenu-items{list-style:none;}
  .megamenu-parent{display:inline;position:relative;z-index:99;}
  .megamenu-parent-title{display:inline;}
  .megamenu-bin{position:absolute;left:0;top:-9000px;z-index:10000;overflow:hidden;}
  .megamenu-bin-right{left:auto;right:-500px;}
  .megamenu-links-horizontal{overflow:hidden;}
  .megamenu-links-horizontal li,
  .megamenu-links-horizontal li a{float:left;}
  .megamenu-menu-vertical .megamenu-parent{display:block;}
  ul a{text-decoration:none;}
  ul a:hover{text-decoration:underline;}
  .megamenu-bin{padding:0.5em;}
  .megamenu-slot{width:200px;margin-bottom:0.5em;margin-right:0.5em;}
  .megamenu-slots-columnar{overflow:hidden;background-color:#5C5C5C;}
  .megamenu-parent{z-index:11 !important;}
}

.megamenu-skin-osul {
  .first h2 a{background-image:none;padding-right:17px;}
  .first h2 a:hover{background-image:none;padding-right:17px;}
  li.active-trail a{background-image:none;}
  h2 a {
    text-decoration:none;
    display:inline;
    color:#fff;
    font-size:14px;
    margin:0;
    padding:10px 47px 10px 31px;
    background:url(h-menu-arrow-down.png) no-repeat right center;
    @include border-radius(4px 4px 0 0);
    font-variant:none;
    &:hover {
      background-color: #4B4B4B;
    }
  }
  .megamenu-bin{@include border-radius(0 0 10px 10px);list-style:none outside none}
  .megamenu-slot{margin-right:4px;list-style:none outside none;width:200px;}
  .megamenu-slot-title a{letter-spacing:normal;}
  .megamenu-item{color:#fff;border:none;}

  .nolink{background:#2F2A2B;background-repeat:no-repeat;color:#fff;width:165px;padding:2px 6px;font-weight:normal;clear:both;}
  .megamenu-items{letter-spacing:normal;line-height:1.5em;margin:0;padding:0 1.45em 0 0;}
  .megamenu-item{list-style:none outside none;padding:0.3em 0 0.3em 8px;}
  .megamenu-item  a{color:#fff;white-space:nowrap;}
  .megamenu-item  a.menu-185301,
  .megamenu-item  a.menu-229581,
  .megamenu-item  a.menu-229501{white-space:normal;}
  .megamenu-item  a:hover{color:#d85a1a;background-image:none;}
  .megamenu-item  a.active{color:#ccc;}
  .megamenu-item  a.active:hover{color:#ccc;text-decoration:none;cursor:text;}
  .megamenu-items .last{border:none;}

  .megamenu-bin {
    margin-top: 3px;
    border: none;
  }
}


h2.pane-title{font-size:20px;line-height:30px;}
#backgroundcolor h2.pane-title{color:#fff;background:#561F4B;-moz-box-shadow:-1px 1.5px 3px 0.25px #ccc;-webkit-box-shadow:-1px 1.5px 3px 0.25px #ccc;box-shadow:-1px 1.5px 3px 0.25px #ccc;padding-left:5px;margin-bottom:2px;}
.span3 .panel-separator{border:1px dashed #CCC;}
.link_description:before{content:' - ';}
#megamenu-mlid-182176 .megamenu-bin{padding:1.5em 0 0 0}
#megamenu-mlid-185326{clear:both;float:left;margin-bottom:0;width:100%;
  background:repeat-x scroll left top #2F2A2B;
  background:-moz-linear-gradient(top,rgba(92,92,92,1) 0%,rgba(37,37,37,1) 100%);
  background:-webkit-linear-gradient(top,rgba(92,92,92,1) 0%,rgba(37,37,37,1) 100%);
  background:-o-linear-gradient(top,rgba(92,92,92,1) 0%,rgba(37,37,37,1) 100%);
  background:-ms-linear-gradient(top,rgba(92,92,92,1) 0%,rgba(37,37,37,1) 100%);
  background:linear-gradient(top,rgba(92,92,92,1) 0%,rgba(37,37,37,1) 100%);

  @include border-radius(0 0 10px 10px);}
#megamenu-mlid-182176 .megamenu-slot-0{margin-left:1em;}
#megamenu-mlid-185326 h3{margin:.5em 0 .5em 1.6em;font-family:'trebuchet ms',
Arial,
sans-serif;color:#b3ba35;letter-spacing:normal;font-size:1em;}
#megamenu-mlid-185326 h3 a{color:#fff;}

#tabs .ui-widget-header{border:0;background:transparent;}
#tabs.ui-tabs .ui-tabs-panel{padding:0;border-left:1px solid #4B4B4B;height:39px;background:#561F4B;@include border-radius(0 4px 4px 0);position:relative;z-index:1;}
#tabs .ui-corner-bottom{border:0;}


.megamenu-items li:hover{background-color:#4B4B4B;color:#fff;@include border-radius(4px);}
.megamenu-items .megamenu-item a{white-space:normal;border:none;}
.megamenu-items .megamenu-item a:hover{color:#fff;text-decoration:none;}
.megamenu-parent{margin:0.1em 1em;}
.megamenu-slot-title span.nolink{@include border-radius(5px);padding:4px 20px;}
.megamenu-menu-vertical{width:8em;}
.megamenu-menu-vertical .megamenu-parent{margin-top:1em;}
.megamenu-slots.flyright{left:7em;top:0;}
.megamenu-slots.flyleft{left:-16.2em;top:0;}
.megamenu-slots-columnar li.megamenu-slot{float:left;}

#tabs-search {
  float:right;
  margin-top:-24px;
  padding: 0;
  a {
    font-size: 14px;
    height: 13px;
    padding: 4px 15px 7px 10px;
    @include border-radius(8px 8px 0 0);
  }

  form {
    margin: 0;
    input {
      margin: 0;
    }
  }
  .tab-content {
    @include border-radius(4px);
  }
  .tab-pane {
    padding: 4px;
    width: 265px;
  }

  .form-submit {
    @include border-radius(4px);
    @include gradient-vertical(#c34500, #983600);
    background: #c34500;
    color: #fff;
    border: none;
    padding: 10px;
    background:url(search_icon_white.png) no-repeat scroll 10px 5px #C34500;
    box-shadow:none;
    float:right;
    height:30px;
    margin:0;
    width:40px;
    float: right;
  }

  .nav-tabs {
    margin: 0 4px;
  }

  .nav-tabs a {
    border: 0;
  }
}

